chore: [PAGOPA-2289] Massive queries
chore: [PAGOPA-2289] Massive queries
